# IC_project2

./: .gitignore  BitStream.hpp  CMakeLists.txt  README.md  doxyconfig  duvidas.txt  mk.sh  remake.sh
examples/: copybinfile  copybinfile.cpp
files/: convFlac.sh  out.flac
src/: main.cpp
src/bitstream/: BitStream.cpp  BitStream.hpp  CMakeLists.txt
src/codecaud/: Codecaud.cpp  Codecaud.hpp
src/codecimg/: Codecimg.cpp  Codecimg.hpp  preditor.cpp  preditor.hpp  visualization.cpp
src/golomb/: CMakeLists.txt  Golomb.cpp  Golomb.hpp  v.cpp
test/: audio_snr.cpp  codecimg.cpp  encodeGolomb.cpp  error.cpp  imgdiff.cpp  readNbits.cpp  readbit  readbit.cpp  readeof.cpp  t.cpp  testGolomb.cpp  test_codecaud.cpp  test_codecimg.cpp  test_codecimg_dc.cpp  test_codecimglossy.cpp  writeNbits.cpp  writebit  writebit.cpp
test/util/: util.cpp
